Delete by order implemented / new DB configuration added through env variables
